--- a/public/assets/css/admin/app.css
+++ b/public/assets/css/admin/app.css
@@ -48,6 +48,7 @@ h3 {
     height: 100%;
     object-fit: cover;
 }
+
 .btn-border-dash {
     border: 1px dashed rgb(190, 188, 188);
     background: none;
@@ -68,44 +69,48 @@ h3 {
     border: 1px solid #d2d6da !important;
     background-image: none !important;
 }
+
 .select2-selection.select2-selection--single {
     height: 40px;
     font-size: 13px;
     display: flex;
     align-items: center;
 }
+
 .select2-container .select2-search--inline .select2-search__field {
     font-size: 13px;
     padding-left: 8px;
 }
 
-.select2-container--default
-    .select2-selection--single
-    .select2-selection__arrow {
+.select2-container--default .select2-selection--single .select2-selection__arrow {
     top: auto;
 }
+
 .dataTables_info,
 .page-link {
     font-size: 0.75rem;
 }
-table.dataTable > tbody > tr > td.select-checkbox:before,
-table.dataTable > tbody > tr > th.select-checkbox:before {
+
+table.dataTable>tbody>tr>td.select-checkbox:before,
+table.dataTable>tbody>tr>th.select-checkbox:before {
     border: 1px solid lightgrey;
     width: 20px;
     height: 20px;
 }
-table.dataTable > tbody > tr.selected > td.select-checkbox:before,
-table.dataTable > tbody > tr.selected > th.select-checkbox:before {
+
+table.dataTable>tbody>tr.selected>td.select-checkbox:before,
+table.dataTable>tbody>tr.selected>th.select-checkbox:before {
     background: #fb6340;
     border: 1px solid lightgrey;
 }
 
-table.dataTable > tbody > tr.selected > * {
+table.dataTable>tbody>tr.selected>* {
     box-shadow: none;
     color: #67748e;
 }
-table.dataTable > tbody > tr.selected > td.select-checkbox:after,
-table.dataTable > tbody > tr.selected > th.select-checkbox:after {
+
+table.dataTable>tbody>tr.selected>td.select-checkbox:after,
+table.dataTable>tbody>tr.selected>th.select-checkbox:after {
     content: "✓";
     font-size: 15px;
     margin-top: -7px;
@@ -114,7 +119,8 @@ table.dataTable > tbody > tr.selected > th.select-checkbox:after {
     text-align: center;
     text-shadow: none;
 }
-div.dataTables_processing > div:last-child > div {
+
+div.dataTables_processing>div:last-child>div {
     background: #fb6340;
 }
 
@@ -123,19 +129,20 @@ div.dataTables_processing > div:last-child > div {
     align-items: center;
 }
 
-.select2-container--default
-    .select2-results__option--highlighted[aria-selected] {
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
     color: #fb6340;
     font-weight: bold;
 }
-.select2-container--default
-    .select2-results__option--highlighted[aria-selected] {
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
     background-color: #fff;
 }
+
 .select2-container--default .select2-results__option[aria-selected="true"] {
     background: #fff;
     color: #fb6340;
 }
+
 /* .select2-container--default .select2-selection--single .select2-selection__rendered {
     font-weight: bold;
 } */
@@ -145,6 +152,7 @@ div.dataTables_processing > div:last-child > div {
     height: 100%;
     margin-right: 0.5rem;
 }
+
 .after-prefix-split {
     width: 1px;
     background: #eee;
@@ -155,6 +163,7 @@ div.dataTables_processing > div:last-child > div {
 .input-group-text {
     color: #999;
 }
+
 .horizontal-split {
     height: 2px;
     width: 3rem;
@@ -166,12 +175,15 @@ div.dataTables_processing > div:last-child > div {
     align-self: flex-start;
     top: 20px;
 }
+
 .form-control[readonly] {
     background-color: white;
 }
+
 .form-control:disabled {
     cursor: not-allowed;
 }
+
 .select2-container--default .select2-selection--multiple,
 .select2-dropdown {
     border: 1px solid #d2d6da !important;
@@ -180,35 +192,40 @@ div.dataTables_processing > div:last-child > div {
 .product-price {
     justify-content: center;
 }
+
 .deal-product .new-price,
 .deal-product .old-price {
     font-size: 1.4rem;
     letter-spacing: 0;
     text-decoration: none;
 }
+
 .new-price {
     color: #ef837b;
     margin-right: 0.8rem;
 }
+
 .old-price {
     color: #cccccc;
     text-decoration: line-through;
 }
-.select2-container--default
-    .select2-selection--multiple
-    .select2-selection__choice {
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
     font-size: 14px;
     line-height: 1.3rem;
     background-color: #fafafa;
     border: 1px solid #e5e5e5;
 }
+
 .label-required:after {
     content: " *";
     color: red;
 }
+
 .height-fit-content {
     height: fit-content;
 }
+
 .product-img {
     width: 50px;
     height: 50px;
@@ -217,12 +234,14 @@ div.dataTables_processing > div:last-child > div {
     padding: 3px;
     display: block;
 }
+
 .absolute-center {
     margin: 0;
     padding: 0;
     transform: translate(-50%, -50%);
 }
-.tooltip > .tooltip-inner {
+
+.tooltip>.tooltip-inner {
     background-color: #fff;
     color: #333;
     font-size: 14px;
@@ -232,29 +251,36 @@ div.dataTables_processing > div:last-child > div {
     border-radius: 3px;
     box-shadow: 0 0 16px 0 rgb(0 0 0 / 10%), 0 8px 16px 0 rgb(0 0 0 / 6%);
 }
-.tooltip > .tooltip-arrow:before {
+
+.tooltip>.tooltip-arrow:before {
     border-top-color: #fff;
 }
+
 .treeview .list-group-item {
     padding: 0 1rem;
     font-size: 15px;
 }
+
 .cut-text {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
+
 .raw-a-button {
     border: none;
     background: none;
     padding: 0;
 }
+
 .raw-a-button:hover {
     color: #fb6340;
 }
+
 .link-button {
     color: #2673dd;
 }
+
 .link-button:hover {
     color: #0046ab;
 }
@@ -263,15 +289,18 @@ div.dataTables_processing > div:last-child > div {
     display: flex;
     position: relative;
 }
+
 .timeline__row_icon {
     width: 30px;
     margin-right: 20px;
     z-index: 1;
 }
+
 .timeline__row_content {
     width: calc(100% - 30px);
     margin-bottom: 20px;
 }
+
 .timeline__row_content .badge {
     margin-bottom: 10px;
 }
@@ -281,9 +310,11 @@ div.dataTables_processing > div:last-child > div {
     padding-bottom: 0;
     margin-bottom: 10px;
 }
+
 .timeline__row:nth-last-child(1):before {
     height: 0;
 }
+
 .timeline__row:before {
     content: "";
     position: absolute;
@@ -303,28 +334,35 @@ div.dataTables_processing > div:last-child > div {
     background: #fff;
     font-size: 1.3em;
 }
+
 .timeline .timeline-icon.success {
     color: #4caf50;
     border-color: #4caf50;
 }
+
 .timeline .timeline-icon.warning {
     color: #ff9800;
     border-color: #ff9800;
 }
+
 .timeline .timeline-icon.danger {
     color: #f44336;
     border-color: #f44336;
 }
+
 .log-info-wrapper {
     line-height: 1.5em;
 }
+
 .log-description {
     color: #8c8c8c;
     font-size: 0.95em;
 }
+
 .log-time {
     color: #bababa;
 }
+
 .profile-avatar {
     width: 30px;
     height: 30px;
@@ -333,34 +371,52 @@ div.dataTables_processing > div:last-child > div {
     background-size: cover !important;
     display: inline-block;
 }
+
 .order-header-row {
     width: 100%;
     height: 40px;
     border-bottom: 1px solid #e8e8e8;
     background-color: hsla(0, 0%, 96%, 0.5) !important;
 }
+
 #sidenav-collapse-main h6 {
     text-overflow: ellipsis;
     overflow: hidden;
     width: 70%;
     white-space: nowrap;
 }
+
 .sidenav-hidden {
     transform: translateX(-17.125rem) !important;
 }
+
 .note-editable {
     background: white;
 }
+
 .note-editable #footer {
     width: 100% !important;
 }
+
 .invalid-feedback {
     line-height: 1rem;
 }
+
 .delfile {
     cursor: pointer;
 }
+
 .delfile:hover {
     scale: 1.1;
     color: white;
+}
+
+.profile-drop-down-menu:before {
+    top: 0 !important;
+}
+
+.error {
+    font-size: 12px;
+    color: red;
+    line-height: 1.5em;
 }
