--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -900,6 +900,7 @@ input[type=number] {
 .toolbox {
     padding: 0 1rem;
 }
+
 .inventory-picker[disabled] {
     box-shadow: unset;
     cursor: default;
@@ -941,6 +942,7 @@ input[type=number] {
     background: #ffffff;
     cursor: pointer;
 }
+
 #number-of-voucher {
     position: absolute;
     font-size: 14px;
@@ -956,6 +958,7 @@ input[type=number] {
     right: 15%;
     z-index: 9;
 }
+
 #sticky-gift-icon.active {
     animation-name: col;
     animation-duration: 2s;
@@ -967,11 +970,13 @@ input[type=number] {
     animation-duration: 2s;
     animation-iteration-count: infinite;
 }
+
 #sticky-gift-icon.active .btn-bell {
     animation-name: bell-ring;
     animation-duration: 2s;
     animation-iteration-count: infinite;
 }
+
 .my-btn-border {
     height: 59px;
     width: 59px;
@@ -1060,10 +1065,12 @@ input[type=number] {
     padding: 0;
     border-radius: 10px;
 }
-.voucher-popup > div:first-child {
+
+.voucher-popup>div:first-child {
     background-color: #fff;
     border-radius: 10px;
 }
+
 #close-no-reopen {
     color: white;
     font-size: 10px;
@@ -1141,50 +1148,41 @@ input[type=number] {
 .voucher-popup .owl-theme.owl-nav-inside .owl-nav .owl-next {
     right: -50px;
 }
+
 .voucher-popup .owl-dots {
     display: none;
 }
+
 .voucher-popup small {
     font-size: 10px;
 }
+
 .voucher-container {
-    background: repeating-linear-gradient(
-                #c4c4c4,
-                #c4c4c4 8px,
-                transparent 0,
-                transparent 28px,
-                #c4c4c4 0,
-                #c4c4c4 42px
-            )
-            0/1px 100% no-repeat,
-        radial-gradient(
-                circle at 0,
-                at 18px,
-                transparent,
-                transparent 0,
-                #c4c4c4 0,
-                #c4c4c4 11px,
-                currentColor 0
-            )
-            1px 0/100% 42px repeat-y;
-    background: repeating-linear-gradient(
-                #c4c4c4,
-                #c4c4c4 8px,
-                transparent 0,
-                transparent 28px,
-                #c4c4c4 0,
-                #c4c4c4 42px
-            )
-            0/1px 100% no-repeat,
-        radial-gradient(
-                circle at 0 18px,
-                transparent,
-                transparent 10px,
-                #c4c4c4 0,
-                #c4c4c4 11px,
-                currentColor 0
-            )
-            1px 0/100% 42px repeat-y;
+    background: repeating-linear-gradient(#c4c4c4,
+            #c4c4c4 8px,
+            transparent 0,
+            transparent 28px,
+            #c4c4c4 0,
+            #c4c4c4 42px) 0/1px 100% no-repeat,
+        radial-gradient(circle at 0,
+            at 18px,
+            transparent,
+            transparent 0,
+            #c4c4c4 0,
+            #c4c4c4 11px,
+            currentColor 0) 1px 0/100% 42px repeat-y;
+    background: repeating-linear-gradient(#c4c4c4,
+            #c4c4c4 8px,
+            transparent 0,
+            transparent 28px,
+            #c4c4c4 0,
+            #c4c4c4 42px) 0/1px 100% no-repeat,
+        radial-gradient(circle at 0 18px,
+            transparent,
+            transparent 10px,
+            #c4c4c4 0,
+            #c4c4c4 11px,
+            currentColor 0) 1px 0/100% 42px repeat-y;
     background-clip: padding-box;
     border: 1px solid #c4c4c4;
     border-left: 0;
@@ -1193,43 +1191,56 @@ input[type=number] {
     color: rgb(238, 77, 45);
     overflow: hidden;
     min-height: 125px;
+    width: 100%;
 }
+
 #close-voucher-list-btn {
     margin-bottom: 1rem;
     cursor: pointer;
 }
+
 .voucher-container:not(:last-child) {
     margin-bottom: 1rem;
 }
+
 .voucher-title {
     display: flex;
     align-items: center;
     font-size: 14px;
     font-weight: bold;
-    min-width: 30%;
+    width: 30%;
     justify-content: center;
 }
+
 .voucher-title span {
     color: #fff;
     padding-left: 1rem;
 }
+
 .voucher-content {
     background-color: white;
 }
+
 .voucher-splitter {
     min-width: 1px;
-    background: repeating-linear-gradient(#e5e5e5,#e5e5e5 5px,transparent 0,transparent 10px);
+    background: repeating-linear-gradient(#e5e5e5, #e5e5e5 5px, transparent 0, transparent 10px);
     position: relative;
 }
+
 .voucher-detail-info {
     display: flex;
+    justify-content: space-between;
+    width: 70%;
 }
+
 .voucher-discount-value {
     font-size: 18px;
 }
+
 .voucher-detail-left {
     padding: 1rem;
 }
+
 .voucher-detail-right {
     display: flex;
     align-items: center;
@@ -1237,9 +1248,11 @@ input[type=number] {
     flex-direction: column;
     padding: 0.5rem;
 }
+
 .voucher-detail-right button {
     min-width: fit-content;
 }
+
 #save-voucher-component-wrapper {
     position: absolute;
     right: 0;
@@ -1259,50 +1272,70 @@ input[type=number] {
     opacity: 1;
     min-width: 350px;
 }
+
 #save-voucher-component-wrapper.hide {
     bottom: 0%;
     height: 0 !important;
     min-height: 0;
     opacity: 0 !important;
 }
+
 .desktop-cart-table {
     display: none !important;
 }
+
 .mobile-cart-table .product-col {
     display: flex;
     flex-direction: row;
 }
+
 .cart-product .product-media {
     min-width: 50px;
 }
+
 .desktop-banner-slider {
     display: none;
 }
+
 #fb-root iframe {
     z-index: 10 !important;
 }
+
 .filter-item a {
     font-size: 14px;
 }
+
 .filter-item a:not(:hover) {
     color: black;
 }
+
 .filter-item a.active {
     color: #c96;
 }
+
 .add-to-wishlist-wrapper {
     margin-top: 2rem;
 }
+
+#customer-rank-icon {
+    width: 20px;
+    position: absolute;
+    top: -100%;
+}
+
 @media (min-width: 991px) {
     .order-lg-first {
         display: block;
     }
+
     .add-to-wishlist-wrapper {
         margin-top: 0;
     }
+
     .desktop-cart-table {
         display: block !important;
     }
+
     .mobile-cart-table {
         display: none;
     }
@@ -1311,6 +1344,7 @@ input[type=number] {
         padding-left: 1rem;
     }
 }
+
 @media screen and (max-width: 768px) {
     .product-media a.product-image {
         height: 30vh;
@@ -1321,12 +1355,15 @@ input[type=number] {
     .quickView-content .product-title {
         margin-top: 0;
     }
+
     .phone-banner-slider {
         display: none;
     }
+
     .desktop-banner-slider {
         display: block;
     }
+
     #save-voucher-component-wrapper {
         width: fit-content;
         right: 0;
