--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -1109,6 +1109,8 @@ blockquote.text-white cite span {
 
 .cart-dropdown .dropdown-cart-products {
     margin-top: -1rem;
+    max-height: 50vh;
+    overflow-y: scroll;
 }
 
 .cart-dropdown .product {
